corrected variable names according to convention

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 
     <footer>
       <span class="item">0 item left</span>
-      <button class="All">All</button>
-      <button class="Completed">Completed</button>
-      <button class="Active">Active</button>
-      <button class="Clear"><a class="anchor" href="#">Clear Completed</a></button>
+      <button class="all">All</button>
+      <button class="completed">Completed</button>
+      <button class="active">Active</button>
+      <button class="clear"><a class="anchor" href="#">Clear Completed</a></button>
     </footer>
 
     <script src="./js/script.js"></script>
